# eDSP

./: .clang-format  .codebeatignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  Doxyfile.in  LICENSE  README.MD  README.md  clean_gcda.sh  codecov.yml  eDSP.kdev4  edsp.pro  faq.txt  format_files.sh  mac_travis.sh  main.cpp  mkdocs.yml  requirements.txt  travis.sh  xenial_travis.sh
benchmark/: CMakeLists.txt  benchmark_fft.cpp  benchmark_transforms.cpp  benchmark_vectorutil.cpp  benchmark_window.cpp  main.cpp
bindings/c/: CMakeLists.txt  README.md
bindings/c/src/: algorithm.c  converter.cpp  core.c  spectral.c  statistics.c  windowing.c
bindings/python/: CMakeLists.txt
bindings/python/include/: algorithm.hpp  auditory.hpp  boost_numpy_dependencies.hpp  converter.hpp  core.hpp  feature.hpp  filter.hpp  io.hpp  oscillator.hpp  spectral.hpp  statistics.hpp  string.hpp  windowing.hpp
bindings/python/src/: algorithm.cpp  auditory.cpp  converter.cpp  core.cpp  feature_spectral.cpp  feature_statistics.cpp  feature_temporal.cpp  filter.cpp  io.cpp  oscillator.cpp  package.cpp  spectral.cpp  statistics.cpp  string.cpp  windowing.cpp
c/: CMakeLists.txt
c/example/: main.c
c/include/: algorithm.h  spectral.h  statistics.h  types.h  windowing.h
c/src/: algorithm.c  spectral.c  statistics.c  windowing.c
edsp/: CMakeLists.txt  config.h
edsp/base/: CMakeLists.txt  analog_filter.h  constants.h  sfinae.h  transform.h  types.h
edsp/blocks/: CMakeLists.txt  delay.h  envelope_detector.h  mute.h  peak_picker.h
edsp/blocks/src/: envelope_detector.cpp  multichannel_to_mono_converter.cpp
edsp/features/: CMakeLists.txt  duration.hpp  energy.hpp  feature.h  feature.hpp  is_silence.hpp  loudness.hpp  power.hpp  properties.h  zero_crossing_rate.hpp
edsp/filters/: CMakeLists.txt  biquad.h
edsp/filters/src/: biquaddesigner.cpp
edsp/frequency/: CMakeLists.txt  autocorrelation.h  cepstrum.h  dct.h  dft.h  dht.h  fft.h  idct.h  idft.h  lpc.h  spectrogram.h  transform.h
edsp/frequency/src/: idct.cpp
edsp/math/: complex.h  trig.h
edsp/oscillators/: CMakeLists.txt  oscillator.hpp  sawtooth.hpp  sin.h  sin.hpp  square.h  square.hpp  triangle.hpp
edsp/oscillators/src/: sin.cpp  square.cpp  triangle.cpp
edsp/utility/: converter.h  map.h  vector.h
edsp/windowing/: CMakeLists.txt  barthann.hpp  bartlett.h  bartlett.hpp  blackman.hpp  blackman_harris.h  blackman_harris.hpp  blackman_nuttall.hpp  bohman.hpp  flat_top.hpp  gaussian.hpp  hamming.h  hamming.hpp  hanning.hpp  kaiser.hpp  parzen.hpp  rectangular.hpp  triangular.h  triangular.hpp  tukey.hpp  welch.hpp  window.hpp
edsp/windowing/src/: barthann.cpp  blackman.cpp  blackman_harris.cpp  blackman_nuttall.cpp  bohman.cpp  flat_top.cpp  hamming.cpp  hanning.cpp  kaiser.cpp  rectangular.cpp  triangular.cpp  tukey.cpp
examples/: CMakeLists.txt  filter_designer.cpp  library_info.cpp
examples/QFilterDesigner/: CMakeLists.txt
examples/QFilterDesigner/resources/: icons.qrc
examples/QFilterDesigner/src/: FrequencyTunning.qml  ImageTabButton.qml  Main.qml  NavigationDrawer.qml  TextDial.qml  main.cpp  qml.qrc  qtquickcontrols2.conf
extension/: CMakeLists.txt
extension/pffft/: fftpack.c  pffft.c  test_pffft.c
libedsp/: CMakeLists.txt  config.h
libedsp/base/: CMakeLists.txt  analog_filter.h  constants.h  sfinae.h  transform.h  types.h
libedsp/blocks/: CMakeLists.txt  fadeout.h  gain.h
libedsp/blocks/src/: fadeout.cpp
libedsp/filters/: CMakeLists.txt  biquaddesigner.h  fir.h
libedsp/filters/src/: biquaddesigner.cpp  fir.cpp
libedsp/frequency/: autocorrelation.h  spectrogram.h
libedsp/frequency/src/: dct.cpp
libedsp/include/: config.h
libedsp/include/base/: analog_filter.h  types.h
libedsp/include/blocks/: CMakeLists.txt  echo.h  envelope_detector.h  fadein.h  fadeout.h  multichannel_to_mono_converter.h  mute.h
libedsp/include/filters/: CMakeLists.txt  biquad.h  dcremoval.h
libedsp/include/frequency/: CMakeLists.txt  cepstrum.h  dct.h  dht.h  fft.h  idct.h  ifft.h  lpc.h  spectrogram.h
libedsp/include/generators/: CMakeLists.txt  generator.h  (+8 more)
libedsp/math/: CMakeLists.txt  math.h  stats.h  trig.h
libedsp/properties/: CMakeLists.txt
libedsp/utility/: CMakeLists.txt
libedsp/windowing/: CMakeLists.txt  README.md  barthann.h
python/: CMakeLists.txt  python_binding.cpp  standard_binding.hpp  transform_binding.hpp  windowing_binding.cpp  windowing_binding.hpp
python/include/: algorithm.hpp  boost_numpy_dependencies.hpp  spectral.hpp  statistics.hpp  windowing.hpp
python/src/: algorithm.cpp  package.cpp  spectral.cpp  statistics.cpp  windowing.cpp
test/: CMakeLists.txt  __main__.py  algorithm_test.py  auditory_test.py  converter_test.py  core_test.py  filter_test.py  io_test.py  launch_me.m  main.cpp  oscillator_test.py  spectral_features_test.py  spectral_test.py  statistical_features_test.py  statistics_test.py  string_test.py  temporal_features_test.py  test_config.h  test_db.h  test_util.h  testing_catch.cpp  testing_dsp.cpp  testing_gtest.cpp  utility.py  utiltity.py  windowing_test.py
test/algorithm/: algorithm.cpp  testing_algorithm.cpp
test/database/: generate_testfiles.m
test/effects/: testing_tools.cpp
test/filter/: testing_biquad.cpp  testing_biquad_designer.cpp  testing_butterworth.cpp  testing_chebyshev_i.cpp  testing_chebyshev_ii.cpp  testing_filter.cpp  testing_filter_generator.cpp
test/io/: testing_io.cpp
test/math/: container_test.cpp  stats_test.cpp
test/oscillators/: testing_oscillators.cpp
test/spectral/: testing_autocorrelation.cpp  testing_correlation.cpp  testing_dct.cpp  testing_fft.cpp  testing_hartley.cpp  testing_hilbert.cpp  testing_transforms.cpp
test/standard/: testing_autocorrelation.cpp  testing_crosscorrelation.cpp
test/statistics/: testing_statistics.cpp
test/tools/: testing_tools.cpp
test/transform/: testing_dct.cpp  testing_fft.cpp  testing_hartley.cpp  testing_hilbert.cpp  testing_transforms.cpp
test/transforms/: fft_test.cpp
test/utilitity/: vectorutil_test.cpp
test/windowing/: testing_windowing.cpp
(+2655 files in other folders)
